--- a/_config.yml
+++ b/_config.yml
@@ -1,27 +1,27 @@
 
 # The name of your website.
-name: Holo Alfa
+name: event log
 
 description:
 
   # Description of your site. This will show up in google.
-  meta: Holo Alfa is a minimalist, mobile first Jekyll theme with focus on readability and content.
+  meta: Thomas Zimmermann on picotm, transactions, and low-level software development.
 
   # Description of your site. This will show up on the front page.
-  subtitle: Holo Alfa is a minimalist, mobile first Jekyll theme with focus on readability and content. <a href="https://github.com/steinvc/holo-alfa">&lt;/&gt; on Github</a>.
+  subtitle: event log is the website and blog of Thomas Zimmermann. Topics are picotm, transactions, and low-level software development.
 
 author:
-  name: Dr. Jekyll # Change this!
+  name: Thomas Zimmermann # Change this!
 
   # Necessary for contact page
-  email: your@email.com # Change this!
+  email: tdz@users.sourceforge.net # Change this!
 
   # Optional text (html) to display after author name. Leave empty if you don't
   # want it.
   info:
 
-url: http://steinvc.github.io
-baseurl: "/holo-alfa"
+url: https://tdz.github.io
+baseurl:
 
 # language attribute in <html> element.
 lang: en
@@ -35,9 +35,9 @@ lang: en
 # If you want to show the subtitle anywhere else than the front page, use
 # {% include subtitle.html %} to include it anywhere you want.
 show-subtitle: true
-display-social-icons: false
+display-social-icons: true
 
-footer-text: This is the footer.<br><a href="http://steinvc.github.io/holo-alfa/">Holo Alfa</a> Jekyll theme crafted by <a href="http://steinvc.github.io/holo-alfa/">Stijn</a>.
+footer-text: <a href="http://steinvc.github.io/holo-alfa/">Holo Alfa</a> Jekyll theme crafted by <a href="http://steinvc.github.io/holo-alfa/">Stijn</a>.
 
 # Preferably 64px in height. Leave empty = disable.
 logo-image: # /img/logo.png
@@ -96,8 +96,8 @@ google-plus:
 reddit:
 soundcloud:
 medium:
-linkedin:
-github:
+linkedin:       https://www.linkedin.com/in/tzimmermann
+github:         https://github.com/tdz/
 behance:
 codepen:
 dribbble:
@@ -146,4 +146,4 @@ defaults:
       type: "posts"
     values:
       layout: "post"
-      excerpt_separator: "<!--more-->"
+      excerpt_separator: "<!-- excerpt -->"
