--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author:
   # want it.
   info:
 
-url: https://tdz.github.io
+url: http://transactionblog.org
 baseurl:
 
 # language attribute in <html> element.
