Updated contact information with new email

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author:
   name: Thomas Zimmermann # Change this!
 
   # Necessary for contact page
-  email: tdz@users.sourceforge.net # Change this!
+  email: contact@tzimmermann.org # Change this!
 
   # Optional text (html) to display after author name. Leave empty if you don't
   # want it.
