Removed reference to Twittr
Signed-off-by: Thomas Zimmermann <contact@tzimmermann.org>

--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ disqus-shortname:
 
 # Use a complete url here, including http:// and such. Requiring just usernames
 # has been considered, but this is way more customizable.
-twitter:        https://twitter.com/transactionblog
+twitter:
 youtube:
 instagram:
 tumblr:
